# rephysco

./: .cursorrules  .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  install.sh  push_to_github.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_installation.py
docs/: agent.md  caching_and_retries.md  implementing_providers.md  llm_factory.md  providers.md
examples/: __init__.py  basic_usage.py  multimodal.py  multiple_providers.py  simple_agent.py  utils.py
rephysco/: __init__.py  __main__.py  _version.py  cache.py  cli.py  client.py  config.py  conversation.py  errors.py  llm_factory.py  retry.py  settings.py  types.py
rephysco/examples/: agent_session.py  run_agent.py
rephysco/providers/: __init__.py  aliyun.py  base.py  factory.py  gemini.py  openai.py  siliconflow.py  xai.py
tests/: __init__.py  test_client.py
