[metadata]
name = rephysco
description = A unified interface for multiple LLM providers
long_description = file: README.md
long_description_content_type = text/markdown
author = Rephysco Team
author_email = info@rephysco.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =
    openai>=1.0.0
    aiohttp>=3.8.0
    pendulum>=2.1.0
    tqdm>=4.65.0
    rich>=13.0.0
    click>=8.0.0
    pydantic>=2.0.0
    diskcache>=5.0.0

[options.extras_require]
dev =
    pytest>=7.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0
    black>=22.0
    isort>=5.0
    mypy>=1.0
    types-aiohttp>=3.8.0
    types-tqdm>=4.65.0
    setuptools>=65.0

[options.packages.find]
exclude =
    tests*
    docs*

[options.package_data]
rephysco = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203 